FIX: stop welcome content going behind the nav at 375px and lower

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -124,3 +124,9 @@ body {
     background-color: red;
     border-color: red;
 }
+
+@media (max-width: 375px) {
+    .welcome-content {
+        margin-top: 70px;
+    }
+}
